<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.021"
            android:textSize="36sp" android:text="@string/messageTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/battleBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="changeTextView" android:text="@string/submit"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/yumekawa"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/messageText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/doudesho"
            android:orientation="vertical">
        <RadioButton
                android:text="@string/fujimura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taiketsu01"/>
        <RadioButton
                android:text="@string/ureshino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taiketsu02"/>
        <RadioButton
                android:text="@string/suzui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taiketsu03"/>
        <RadioButton
                android:text="@string/suzumushi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/taiketsu04" android:layout_weight="1"/>
    </RadioGroup>
    <Spinner
            android:layout_width="398dp"
            android:layout_height="37dp"
            android:id="@+id/dekinexe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:spinnerMode="dropdown"/>
    <ImageView
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:id="@+id/yumekawa" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dekinexe" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="TODO"/>
    <EditText
            android:layout_width="295dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:text="@string/deathzigoq"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/doudesho" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="horizontal"/>
    <Button
            android:text="@string/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/yumekawa"
            android:onClick="moveActivity"
            app:layout_constraintStart_toEndOf="@+id/battleBtn" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/moveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/yumekawa"
            android:onClick="rotationActivity"/>
</android.support.constraint.ConstraintLayout>