<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScrollActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/neko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="24sp"
                android:gravity="center" android:layout_marginTop="10sp" android:layout_marginBottom="20sp"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:srcCompat="@drawable/doubutsu2" android:id="@+id/imageView2"/>
        <TextView
                android:text="@string/penguin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
                android:gravity="center" android:layout_marginTop="10sp" android:layout_marginBottom="30sp"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:srcCompat="@drawable/doubutsu3" android:id="@+id/imageView3"/>
        <TextView
                android:text="@string/usagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:gravity="center"
                android:textSize="24sp" android:layout_marginTop="10sp" android:layout_marginBottom="30sp"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:srcCompat="@drawable/doubutsu4" android:id="@+id/imageView4"/>
    </LinearLayout>
</ScrollView>